@@ -145,6 +145,28 @@
            Mod-1 
         </td>
         <td align="center" nowrap>
+          Page_up
+        </td>
+        <td style="color:#0000ff" nowrap>
+          Lower the child in the current frame
+        </td>
+      </tr>
+      <tr>
+        <td align="right" style="color:#ff0000" nowrap>
+           Mod-1 
+        </td>
+        <td align="center" nowrap>
+          Page_down
+        </td>
+        <td style="color:#0000ff" nowrap>
+          Raise the child in the current frame
+        </td>
+      </tr>
+      <tr>
+        <td align="right" style="color:#ff0000" nowrap>
+           Mod-1 
+        </td>
+        <td align="center" nowrap>
           Home
         </td>
         <td style="color:#0000ff" nowrap>
@@ -408,7 +430,9 @@
           1
         </td>
         <td style="color:#0000ff" nowrap>
-          Move and focus the current frame or focus the current window parent
+          Move and focus the current frame or focus the current window parent.
+On *present-windows-corner*: Present windows in the current root.
+On *present-all-windows-corner*: Present all windows in all frames.
         </td>
       </tr>
       <tr>
@@ -419,7 +443,9 @@
           3
         </td>
         <td style="color:#0000ff" nowrap>
-          Resize and focus the current frame or focus the current window parent
+          Resize and focus the current frame or focus the current window parent.
+On *present-windows-corner*: Present windows in the current root.
+On *present-all-windows-corner*: Present all windows in all frames.
         </td>
       </tr>
       <tr>
@@ -1192,7 +1218,9 @@
           1
         </td>
         <td style="color:#0000ff" nowrap>
-          Move and focus the current child - Create a new frame on the root window
+          Move and focus the current child - Create a new frame on the root window.
+On *present-windows-corner*: Present windows in the current root.
+On *present-all-windows-corner*: Present all windows in all frames.
         </td>
       </tr>
       <tr>
@@ -1203,7 +1231,9 @@
           3
         </td>
         <td style="color:#0000ff" nowrap>
-          Resize and focus the current child - Create a new frame on the root window
+          Resize and focus the current child - Create a new frame on the root window.
+On *present-windows-corner*: Present windows in the current root.
+On *present-all-windows-corner*: Present all windows in all frames.
         </td>
       </tr>
       <tr>
