@@ -16,6 +16,8 @@ Mod-1                Tab             Select the next child
 Mod-1 Shift          Tab             Select the previous child
 Mod-1                Return          Enter in the selected frame - ie make it the root frame
 Mod-1 Shift          Return          Leave the selected frame - ie make its parent the root frame
+Mod-1                Page_up         Lower the child in the current frame
+Mod-1                Page_down       Raise the child in the current frame
 Mod-1                Home            Switch to the root frame
 Mod-1 Shift          Home            Switch and select the root frame
                      Menu            Show all frames info windows until a key is release
@@ -43,8 +45,12 @@ Mod-1                |0|             Bind or jump to a slot
 Mouse buttons actions in main mode:
 ----------------------------------
 
-                     1               Move and focus the current frame or focus the current window parent
-                     3               Resize and focus the current frame or focus the current window parent
+                     1               Move and focus the current frame or focus the current window parent.
+On *present-windows-corner*: Present windows in the current root.
+On *present-all-windows-corner*: Present all windows in all frames.
+                     3               Resize and focus the current frame or focus the current window parent.
+On *present-windows-corner*: Present windows in the current root.
+On *present-all-windows-corner*: Present all windows in all frames.
 Mod-1                1               Move and focus the current child - Create a new frame on the root window
 Mod-1                3               Resize and focus the current child - Create a new frame on the root window
 Mod-1 Control        1               Move the window under the mouse cursor to another frame
@@ -121,8 +127,12 @@ Mod-1                |0|             Bind or jump to a slot
 Mouse buttons actions in second mode:
 ------------------------------------
 
-                     1               Move and focus the current child - Create a new frame on the root window
-                     3               Resize and focus the current child - Create a new frame on the root window
+                     1               Move and focus the current child - Create a new frame on the root window.
+On *present-windows-corner*: Present windows in the current root.
+On *present-all-windows-corner*: Present all windows in all frames.
+                     3               Resize and focus the current child - Create a new frame on the root window.
+On *present-windows-corner*: Present windows in the current root.
+On *present-all-windows-corner*: Present all windows in all frames.
 Mod-1                1               Move and focus the current child - Create a new frame on the root window
 Mod-1                3               Resize and focus the current child - Create a new frame on the root window
 Mod-1 Control        1               Move the window under the mouse cursor to another frame
