@@ -18,6 +18,9 @@
       <a name="MAIN"></a><a href="#Top">Main</a>
     </h3>
     <p>
+      c: <a href="#CHILD-MENU">< Child menu ></a>
+    </p>
+    <p>
       f: <a href="#FRAME-MENU">< Frame menu ></a>
     </p>
     <p>
@@ -34,6 +37,31 @@
     </p>
     <p>
       y: <a href="#UTILITY-MENU">< Utility menu ></a>
+    </p>
+    <hr>
+    <h3>
+      <a name="CHILD-MENU"></a><a href="#MAIN">Child-Menu</a>
+    </h3>
+    <p>
+      r: Rename the current child
+    </p>
+    <p>
+      x: Remove the current child from the CLFSWM tree
+    </p>
+    <p>
+      Delete: Remove the current child from its parent frame
+    </p>
+    <p>
+      h: Hide the current child
+    </p>
+    <p>
+      u: Unhide a child in the current frame
+    </p>
+    <p>
+      f: Unhide a child from all frames in the current frame
+    </p>
+    <p>
+      a: Unhide all current frame hidden children
     </p>
     <hr>
     <h3>
@@ -58,16 +86,7 @@
       w: <a href="#MANAGED-WINDOW-MENU">< Managed window type menu ></a>
     </p>
     <p>
-      i: <a href="#FRAME-INFO-MENU">< Frame info menu ></a>
-    </p>
-    <p>
-      r: Rename the current child
-    </p>
-    <p>
-      u: Renumber the current frame
-    </p>
-    <p>
-      x: Create a new frame for each window in frame
+      s: <a href="#FRAME-MISCELLANEOUS-MENU">< Frame miscallenous menu ></a>
     </p>
     <hr>
     <h3>
@@ -254,13 +273,25 @@
     </p>
     <hr>
     <h3>
-      <a name="FRAME-INFO-MENU"></a><a href="#FRAME-MENU">Frame-Info-Menu</a>
+      <a name="FRAME-MISCELLANEOUS-MENU"></a><a href="#FRAME-MENU">Frame-Miscellaneous-Menu</a>
     </h3>
     <p>
       s: Show all frames info windows
     </p>
     <p>
-      h: Hide all frames info windows
+      i: Hide all frames info windows
+    </p>
+    <p>
+      h: Hide the current frame window
+    </p>
+    <p>
+      w: Show the current frame window
+    </p>
+    <p>
+      u: Renumber the current frame
+    </p>
+    <p>
+      x: Create a new frame for each window in frame
     </p>
     <hr>
     <h3>
