@@ -1,5 +1,9 @@
 2008-06-03  Philippe Brochard  <pbrochard@common-lisp.net>
 
+	* src/clfswm-internal.lisp (frame-lower-child)
+	(frame-raise-child): New functions to raise/lower a child in its
+	frame.
+
 	* src/clfswm-util.lisp (have-to-present-windows)
 	(have-to-present-all-windows): New functions to have an MaxOS
 	expose like on mouse click in screen corner.
